--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1><a href="./index.html">My Portfolio</a></h1>
         </div>
         <div class="banner-links">
-            <div class="links">
+            <!--<div class="links">-->
                 <button class="img-btn">
                     <img src="./assets/hiclipart.com.png" alt="world photo"/>
                     <span class="arrow"><img src="./assets/arrow-down-short.svg"/></span>
@@ -26,7 +26,7 @@
                     <li class="about"><a href="./public/about-me.html">About Me</a></li>
                     <li class="contact"><a href="./public/contact.html">Contact</a></li>
                 </ul>
-            </div>
+            <!--</div>-->
         </div>
         <div class="info-base">
             <h2>Welcome</h2>
