--- a/index.html
+++ b/index.html
@@ -15,18 +15,25 @@
             <h1><a href="./index.html">My Portfolio</a></h1>
         </div>
         <div class="banner-links">
-            <!--<div class="links">-->
-                <button class="img-btn">
-                    <img src="./assets/hiclipart.com.png" alt="world photo"/>
-                    <span class="arrow"><img src="./assets/arrow-down-short.svg"/></span>
+            <!--<button class="img-btn">
+                <img src="./assets/hiclipart.com.png" alt="world photo"/>
+                <span class="arrow"><img src="./assets/arrow-down-short.svg"/></span>
+            </button>    
+            <ul class="link-content">
+                <li class="resume"><a href="https://adamrenemorales.github.io/capstone-1-resume/">Resume</a></li>
+                <li class="projects"><a href="./public/projects.html">Projects</a></li>
+                <li class="about"><a href="./public/about-me.html">About Me</a></li>
+                <li class="contact"><a href="./public/contact.html">Contact</a></li>
+            </ul>-->
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img class="image-icon" src="../assets/image31-removebg-preview.png" alt="world photo"/>
                 </button>
-                <ul class="link-content">
-                    <li class="resume"><a href="https://adamrenemorales.github.io/capstone-1-resume/">Resume</a></li>
-                    <li class="projects"><a href="./public/projects.html">Projects</a></li>
-                    <li class="about"><a href="./public/about-me.html">About Me</a></li>
-                    <li class="contact"><a href="./public/contact.html">Contact</a></li>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://adamrenemorales.github.io/capstone-1-resume/">resume</a></li>
+                    <li><a class="dropdown-item" href="https://adamrenemorales.github.io/capstone-1-resume/">resume</a></li>
                 </ul>
-            <!--</div>-->
+            </div>
         </div>
         <div class="info-base">
             <h2>Welcome</h2>
