--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>-->
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img class="image-icon" src="../assets/image31-removebg-preview.png" alt="world photo"/>
+                    <img class="image-icon" src="./assets/image31-removebg-preview.png" alt="world photo"/>
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="https://adamrenemorales.github.io/capstone-1-resume/">resume</a></li>
