--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="banner-links">
             <ul class="link-content">
                 <li class="resume"><a href="https://adamrenemorales.github.io/capstone-1-resume/">Resume</a></li>
-                <li class="projects"><a href="./projects.html">Projects</a></li>
-                <li class="about"><a href="./about-me.html">About Me</a></li>
-                <li class="contact"><a href="./contact.html">Contact</a></li>
+                <li class="projects"><a href="./public/projects.html">Projects</a></li>
+                <li class="about"><a href="./public/about-me.html">About Me</a></li>
+                <li class="contact"><a href="./public/contact.html">Contact</a></li>
             </ul>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
